# sql-fingerprint

./: .pre-commit-config.yaml  CHANGELOG.rst  Cargo.toml  README.md  README.rst
.github/workflows/: main.yml
src/: lib.rs
