[package]
name = "sql-fingerprint"
version = "1.10.0"
edition = "2024"
license = "MIT"
description = "A SQL fingerprinter."
repository = "https://github.com/adamchainz/sql-fingerprint"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
sqlparser = { version = ">= 0.61.0", features = ["visitor"] }
